Fix index body that wouldn't shrink and wrap properly

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -23,8 +23,10 @@ sleek-nav {
   flex-wrap: wrap;
 }
 sleek-news {
-  flex: 3 3;
+  min-width: 18em;
+  flex: 3;
 }
 sleek-exchanges {
-  flex: 1 1;
+  min-width: 10em;
+  flex: 1;
 }
